--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+  <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
